Tue Nov 17 10:12:55 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
          Fixed compile warnings

Tue Nov 17 10:11:20 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/IDL_Test/Double_Inherited_Component/ComponentC.cdp:
        * tests/IDL_Test/Double_Inherited_Component/ComponentC_exec.h:
        * tests/IDL_Test/Double_Inherited_Component/ComponentC_exec.cpp:
        * tests/IDL_Test/Double_Inherited_Component/Inherited_components.idl:
          Extended test with setting attributes on each level.

Tue Nov 17 09:49:55 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Connector_T.cpp
        * connectors/dds4ccm/impl/ndds/Connector_T.h
        * connectors/dds4ccm/impl/ndds/Writer_T.cpp
        * connectors/dds4ccm/impl/ndds/Writer_T.h
          Removed old stuff

Tue Nov 17 09:21:55 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector_exec.cpp
        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector_exec.h
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.cpp
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.h
        * connectors/dds4ccm/examples/Shapes/Connector/Shapes_Connector_exec.cpp
        * connectors/dds4ccm/examples/Shapes/Connector/Shapes_Connector_exec.h
        * connectors/dds4ccm/impl/ndds/Connector_T.cpp
        * connectors/dds4ccm/impl/ndds/Connector_T.h
        * connectors/dds4ccm/tests/KeyedSamples/Connector/Keyed_Test_Connector_exec.cpp
        * connectors/dds4ccm/tests/KeyedSamples/Connector/Keyed_Test_Connector_exec.h
        * connectors/dds4ccm/tests/UnkeyedSamples/Connector/Unkeyed_Test_Connector_exec.cpp
        * connectors/dds4ccm/tests/UnkeyedSamples/Connector/Unkeyed_Test_Connector_exec.h