@@ -12,19 +12,38 @@
 #include  <Components.idl>
 module connector_test
 {
+  interface X {
+    attribute string X_a;
+    void opX ();
+  };
+  interface Y {
+    attribute string Y_a;
+    void opY ();
+  };
+  interface Z {
+    attribute string Z_a;
+    void opZ ();
+  };
+    
   component A
   {
     attribute string topic_name_a;
+    uses X x_a1;
+    provides X x_a2;
   };
 
   component B : A
   {
     attribute string topic_name_b;
+    uses Y y_b1;
+    provides Y y_b2;
   };
 
   component C : B
   {
     attribute string topic_name_c;
+    uses Z z_c1;
+    provides Z z_c2;
   };
 };
 #endif
